// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`set/unset > basic nested changes 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "slug._type": "slug",
      },
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "slug.current": "@@ -6,7 +6,20 @@
 ard-
-iii
+with-a-vengeance
",
      },
      "id": "die-hard-iii",
    },
  },
]
`;

exports[`set/unset > deep nested changes 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "products[_key=="item-1"].variants[_key=="variant-2"]['lace-type']",
      ],
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "products[_key=="item-1"].comparisonFields['support-level']": "@@ -1,5 +1,8 @@
-basic
+advanced
",
        "products[_key=="item-1"].variants[_key=="variant-1"]['lace-type']": "@@ -1,5 +1,5 @@
-waxed
+slick
",
      },
      "id": "die-hard-iii",
    },
  },
]
`;

exports[`set/unset > set + unset, image example 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "image.asset._ref": "image-b",
        "image.crop.bottom": 0.1,
        "image.crop.left": 0.2,
        "image.crop.right": 0.2,
        "image.crop.top": 0.1,
        "image.hotspot.height": 0.75,
        "image.hotspot.width": 0.75,
        "image.hotspot.x": 0.48,
      },
    },
  },
]
`;

exports[`set/unset > set + unset, nested changes 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "year",
        "slug.auto",
      ],
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "arr[1]": null,
        "slug._type": "slug",
      },
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "slug.current": "@@ -6,7 +6,20 @@
 ard-
-iii
+with-a-vengeance
",
      },
      "id": "die-hard-iii",
    },
  },
]
`;

exports[`set/unset > simple root-level changes 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "rating": 4,
      },
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "title": "@@ -6,5 +6,20 @@
 ard 
-3
+with a Vengeance
",
      },
      "id": "die-hard-iii",
    },
  },
]
`;
